--- a/index.html
+++ b/index.html
@@ -1,144 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1, width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mark Sexton Portfolio</title>
-  <meta name="description" content="Explore the portfolio of Mark Sexton showcasing cutting edge creative work" />
-  <link rel="stylesheet" href="./global.css" />
+  <meta name="description" content="Creative Director, designer and technologist — Mark Sexton" />
   <link rel="stylesheet" href="./styles.css" />
-  <style>
-    @font-face {
-      font-family: "Helvetica Neue";
-      src: url("./public/HelveticaNeueThin.ttf");
-      font-weight: 100;
-    }
 
-    @font-face {
-      font-family: "Helvetica Neue";
-      src: url("./public/HelveticaNeueRoman.ttf");
-      font-weight: 400;
-    }
-  </style>
+
+  <!-- Favicon basics -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon_io/favicon-16x16.png">
+  <link rel="shortcut icon" href="/public/favicon_io/favicon.ico">
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="/favicon_io/apple-touch-icon.png">
+
+  <!-- Android + PWA Support -->
+  <link rel="manifest" href="/public/favicon_io/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="192x192" href="/public/favicon_io/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/public/favicon_io/android-chrome-512x512.png">
+
+
+
+
+
 </head>
 
 <body>
-  <div class="desktop-home">
-    <section class="hero1">
-      <video class="background-video" autoplay muted loop playsinline>
-        <source src="./public/wave-loop-1920x.webm" type="video/webm" />
-        Your browser does not support the video tag.
-      </video>
+  <main>
 
-      <div class="menu1">
-        <div class="menu2">Home Work About Contact</div>
-        <div class="purple-menu-dot-container">
-          <div class="purple-menu-dot"></div>
-        </div>
-      </div>
-      <img class="marksexton-1-icon" loading="lazy" alt="" src="./public/marksexton-1.svg" />
-    </section>
-    <section class="page-content1">
-      <h1 class="hero-description1">
-        Creative Director, designer and technologist
-      </h1>
-      <div class="content">
-        <div class="page-content-text-block">
-          <p class="with-years-of">
-            With years of experience leading groundbreaking design initiatives
-            across interactive media, augmented reality, video animation,
-            experiential displays, print, and packaging, I specialize in
-            pushing creative boundaries and leveraging emerging technologies
-            to achieve measurable results.
-          </p>
-          <p class="with-years-of">&nbsp;</p>
-          <p class="with-years-of">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-            sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-        <img class="portfolio-peek-icon1" loading="lazy" alt="" src="./public/portfolio-peek1.svg" />
-      </div>
-    </section>
-    <section class="footer1">
-      <h1 class="foooter-headline1">
-        <p class="with-years-of">Let’s work together on</p>
-        <p class="with-years-of">your next project</p>
-      </h1>
-      <div class="footer-contact">
-        <img class="horizontal-line-icon" loading="lazy" alt="" src="./public/horizontal-line.svg" />
-
-        <button class="contact-details">
-          <div class="bttn-phone2">
-            <div class="infomarksextoncom1">info@marksexton.com</div>
-          </div>
-        </button>
-        <button class="contact-details1">
-          <div class="bttn-phone3">
-            <div class="infomarksextoncom1">763.234.9542</div>
-          </div>
-        </button>
-        <div class="bttn-contact1">
-          <div class="contact-me1">Contact me</div>
-        </div>
-      </div>
-    </section>
-  </div>
-  <div class="mobile-home">
+    <!-- HERO SECTION -->
     <section class="hero">
-
+      <!-- Video Background -->
       <video class="background-video" autoplay muted loop playsinline>
         <source src="./public/wave-loop-1920x.webm" type="video/webm" />
-        Your browser does not support the video tag.
+        Your browser doesn’t support HTML5 video.
       </video>
 
-      <div class="menu">
-        <div class="menu-text">Menu</div>
-        <div class="purple-menu-dot-wrapper">
-          <img class="purple-menu-dot-icon" loading="lazy" alt="" src="./public/purple-menu-dot.svg" />
-        </div>
-      </div>
-      <img class="marksextonstacked-1-icon" loading="lazy" alt="" src="./public/marksextonstacked-1.svg" />
+      <img src="./public/corner-fade.png" alt="" class="corner-fade" />
+
+      <!-- Desktop SVG -->
+      <img src="./public/marksexton-1.svg" alt="Mark Sexton" class="hero-logo hero-logo-desktop" />
+
+      <!-- Mobile SVG -->
+      <img src="./public/marksextonstacked-1.svg" alt="Mark Sexton" class="hero-logo hero-logo-mobile" />
+
+      <!-- Navigation -->
+      <header class="site-header">
+        <!-- Corner Fade -->
+
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item active"><a href="#">Home</a></li>
+            <li class="nav-item"><a href="#">Work</a></li>
+            <li class="nav-item"><a href="#">About</a></li>
+            <li class="nav-item"><a href="#">Contact</a></li>
+          </ul>
+          <button class="nav-toggle" aria-label="Toggle menu">☰</button>
+        </nav>
+
+      </header>
     </section>
+
+    <!-- MAIN CONTENT -->
     <section class="page-content">
-      <h1 class="hero-description">
-        Creative Director, designer and technologist
-      </h1>
-      <div class="content-body">
-        <div class="main-content">
-          With years of experience leading groundbreaking design initiatives
-          across interactive media, augmented reality, video animation,
-          experiential displays, print, and packaging, I specialize in pushing
-          creative boundaries and leveraging emerging technologies to achieve
-          measurable results.
-        </div>
-        <img class="portfolio-peek-icon" loading="lazy" alt="" src="./public/portfolio-peek.svg" />
+      <div class="page-text">
+        <h1>Creative Director, designer and technologist</h1>
+        <p>
+          With years of experience leading groundbreaking design initiatives across interactive media, augmented
+          reality, video animation, experiential displays, print, and packaging, I specialize in pushing creative
+          boundaries and leveraging emerging technologies to achieve measurable results.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua…
+        </p>
+      </div>
+
+      <div class="portfolio-peek-wrapper">
+        <div class="purple-circle"></div>
+        <img class="portfolio-peek" src="./public/circular-type.svg" alt="Portfolio preview" />
+      </div>
+
+
+    </section>
+
+    <!-- FOOTER -->
+    <section class="footer" id="contact">
+
+      <h2 class="footer-title">Let's work together on your next project</h2>
+
+      <div class="footer-contact">
+        <a href="mailto:info@marksexton.com" class="btn btn-outline">info@marksexton.com</a>
+        <a href="tel:+17632349542" class="btn btn-outline">763.234.9542</a>
+        <a href="#contact" class="btn btn-primary">Contact me</a>
       </div>
     </section>
-    <section class="footer">
-      <h1 class="foooter-headline">
-        <p class="lets-work-together1">Let’s work together on</p>
-        <p class="lets-work-together1">your next project</p>
-      </h1>
-      <div class="contact-info">
-        <button class="bttn-phone">
-          <div class="infomarksextoncom">info@marksexton.com</div>
-        </button>
-        <button class="bttn-phone1">
-          <div class="infomarksextoncom">763.234.9542</div>
-        </button>
-        <div class="bttn-contact">
-          <div class="contact-me">Contact me</div>
-        </div>
-      </div>
-    </section>
-  </div>
+
+  </main>
+
+
+  <script>
+    // SUBTLE PARALLAX SCROLL
+    let ticking = false;
+
+    function updateParallax() {
+      const scrollY = window.pageYOffset;
+
+      // Hero section moves slowest
+      const hero = document.querySelector('.hero');
+      if (hero) {
+        hero.style.transform = `translateY(${scrollY * 0.05}px)`;
+      }
+
+      // Page content moves at medium speed
+      const pageContent = document.querySelector('.page-content');
+      if (pageContent) {
+        pageContent.style.transform = `translateY(${scrollY * -0.2}px)`;
+      }
+
+      // Logo needs to move relative to the hero section to match page content
+      const heroLogoDesktop = document.querySelector('.hero-logo-desktop');
+      const heroLogoMobile = document.querySelector('.hero-logo-mobile');
+
+      if (heroLogoDesktop) {
+        heroLogoDesktop.style.transform = `translateY(${scrollY * -0.25}px)`; // -0.15 total (hero -0.1 + logo -0.05)
+      }
+
+      if (heroLogoMobile) {
+        heroLogoMobile.style.transform = `translateY(${scrollY * -0.25}px)`; // -0.15 total (hero -0.1 + logo -0.05)
+      }
+
+      // Footer moves fastest
+      const footer = document.querySelector('.footer');
+      if (footer) {
+        footer.style.transform = `translateY(${scrollY * -0.25}px)`;
+      }
+
+      ticking = false;
+    }
+
+    function requestTick() {
+      if (!ticking) {
+        requestAnimationFrame(updateParallax);
+        ticking = true;
+      }
+    }
+
+    window.addEventListener('scroll', requestTick, { passive: true });
+
+    // Mobile navigation toggle
+    document.querySelector('.nav-toggle').onclick = () => {
+      document.querySelector('.nav-list').classList.toggle('open');
+    };
+  </script>
+
+
+
+
+
 </body>
 
 </html>
