--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <link rel="manifest" href="/public/favicon_io/site.webmanifest">
   <link rel="icon" type="image/png" sizes="192x192" href="/public/favicon_io/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/public/favicon_io/android-chrome-512x512.png">
+
+
+  <!-- Prevent user scaling on mobile -->
+  <meta name="viewport" content="width=device-width,
+               initial-scale=1.0,
+               maximum-scale=1.0,
+               minimum-scale=1.0,
+               user-scalable=no" />
+
+
 </head>
 
 <body>
