--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 <body>
   <main>
     <section class="hero">
-      <video class="background-video" autoplay muted loop playsinline poster="public/wave-loop.jpg" preload="auto">
-        <source src="./public/wave-loop.webm" type="video/webm" />
-        <source src="public/wave-loop.mp4" type="video/mp4">
+      <video class="background-video" autoplay muted loop playsinline poster="public/wave-loop-5.28.25.jpg"
+        preload="auto">
+        <source src="./public/wave-loop-5.28.25.webm" type="video/webm" />
+        <source src="public/wave-loop-5.28.25.mp4" type="video/mp4">
         Your browser doesn’t support HTML5 video.
       </video>
       <img src="./public/corner-fade.png" alt="" class="corner-fade" />
