--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
                user-scalable=no" />
 
 
-  <link rel="preload" as="video" href="public/wave-loop.webm" type="video/webm" media="(min-width: 769px)">
-
-
-
 </head>
 
 <body>
   <main>
     <section class="hero">
-      <video class="background-video" autoplay muted loop playsinline poster="public/wave-loop-5.28.25.jpg"
-        preload="auto">
-        <source src="./public/wave-loop-5.28.25.webm" type="video/webm" />
-        <source src="public/wave-loop-5.28.25.mp4" type="video/mp4">
+      <video class="background-video" autoplay muted loop playsinline>
+        <source src="./public/wave-loop-1920x.webm" type="video/webm" />
         Your browser doesn’t support HTML5 video.
       </video>
       <img src="./public/corner-fade.png" alt="" class="corner-fade" />
