--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         <p class="fade-in">With years of experience leading groundbreaking design initiatives across interactive media,
           augmented reality, video animation, experiential displays, print, and packaging, I specialize in pushing
           creative boundaries and leveraging emerging technologies to achieve measurable results.</p>
-        <p class="fade-in">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua…</p>
+        <p class="fade-in">This site is under construction. Stop by again soon!</p>
       </div>
 
       <div class="portfolio-peek-wrapper">
