--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         <p class="fade-in">With years of experience leading groundbreaking design initiatives across interactive media,
           augmented reality, video animation, experiential displays, print, and packaging, I specialize in pushing
           creative boundaries and leveraging emerging technologies to achieve measurable results.</p>
-        <p class="fade-in">This site is under construction. Stop by again soon!</p>
+        <p class="fade-in"><span style="color: #5000ff; font-size: 1.5rem;">This site is under construction. Stop by
+            again soon!</span></span>
+        </p>
       </div>
 
       <div class="portfolio-peek-wrapper">
