--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           augmented reality, video animation, experiential displays, print, and packaging, I specialize in pushing
           creative boundaries and leveraging emerging technologies to achieve measurable results.</p>
         <p class="fade-in"><span style="color: #5000ff; font-size: 1.5rem;">This site is under construction. Stop by
-            again soon!</span></span>
+            again soon.</span></span>
         </p>
       </div>
 
