--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 <body>
   <main>
     <section class="hero">
-      <video class="background-video" autoplay muted loop playsinline>
-        <source src="./public/wave-loop-1920x.webm" type="video/webm" />
-        Your browser doesn’t support HTML5 video.
+      <video class="background-video" autoplay muted loop playsinline webkit-playsinline preload="metadata">
+        <source src="./public/wave-loop-5.30.mp4" type="video/mp4" />
+        <source src="./public/wave-loop-5.30.webm" type="video/webm" />
+        Your browser doesn't support HTML5 video.
       </video>
       <img src="./public/corner-fade.png" alt="" class="corner-fade" />
       <img src="./public/marksexton-1.svg" alt="Mark Sexton" class="hero-logo hero-logo-desktop" />
