--- a/index.html
+++ b/index.html
@@ -2,111 +2,86 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mark Sexton Portfolio</title>
-  <meta name="description" content="Creative Director, designer and technologist – Mark Sexton" />
-  <link rel="stylesheet" href="./styles.css" />
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon_io/favicon-16x16.png">
-  <link rel="shortcut icon" href="/public/favicon_io/favicon.ico">
-  <link rel="apple-touch-icon" href="/favicon_io/apple-touch-icon.png">
-  <link rel="manifest" href="/public/favicon_io/site.webmanifest">
-  <link rel="icon" type="image/png" sizes="192x192" href="/public/favicon_io/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/public/favicon_io/android-chrome-512x512.png">
-
-
-  <!-- Prevent user scaling on mobile -->
-  <meta name="viewport" content="width=device-width,
-               initial-scale=1.0,
-               maximum-scale=1.0,
-               minimum-scale=1.0,
-               user-scalable=no" />
-
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mark Sexton | Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
-  <main>
+  <div data-scroll-container>
     <section class="hero">
       <video class="background-video" autoplay muted loop playsinline webkit-playsinline preload="metadata">
         <source src="./public/wave-loop-5.30.mp4" type="video/mp4" />
         <source src="./public/wave-loop-5.30.webm" type="video/webm" />
         Your browser doesn't support HTML5 video.
       </video>
-      <img src="./public/corner-fade.png" alt="" class="corner-fade" />
-      <img src="./public/marksexton-1.svg" alt="Mark Sexton" class="hero-logo hero-logo-desktop" />
-      <img src="./public/marksextonstacked-1.svg" alt="Mark Sexton" class="hero-logo hero-logo-mobile" />
-
       <header class="site-header">
-        <nav class="nav">
+        <nav class="site-nav">
           <ul class="nav-list">
             <li class="nav-item active"><a href="#">Home</a></li>
             <li class="nav-item"><a href="#">Work</a></li>
             <li class="nav-item"><a href="#">About</a></li>
             <li class="nav-item"><a href="#">Contact</a></li>
           </ul>
-          <button class="nav-toggle" aria-label="Toggle menu">☰</button>
+          <button class="nav-toggle">Menu</button>
         </nav>
       </header>
+      <img class="corner-fade" src="./public/corner-fade.png" alt="Corner fade effect">
+      <img class="hero-logo hero-logo-desktop" src="./public/marksexton-1.svg" alt="Mark Sexton logo">
+      <img class="hero-logo hero-logo-mobile" src="./public/marksextonstacked-1.svg" alt="Mark Sexton mobile logo">
     </section>
-
-    <section class="page-content">
+    <main class="page-content">
       <div class="page-text">
-        <h1 class="fade-in">Creative Director, designer and technologist</h1>
-        <p class="fade-in">With years of experience leading groundbreaking design initiatives across interactive media,
+        <h1>
+          <div class="line-wrapper fade-in"><span class="line">Creative Director, designer and technologist</span></div>
+        </h1>
+        <p class="fade-in">
+          With years of experience leading groundbreaking design initiatives across interactive media,
           augmented reality, video animation, experiential displays, print, and packaging, I specialize in pushing
-          creative boundaries and leveraging emerging technologies to achieve measurable results.</p>
-        <p class="fade-in"><span style="color: #5000ff; font-size: 1.5rem;">This site is under construction. Stop by
-            again soon.</span></span>
+          creative boundaries and leveraging emerging technologies to achieve measurable results.
+        </p>
+        <p class="fade-in">
+          This site is under construction. Stop by again soon.
         </p>
       </div>
-
       <div class="portfolio-peek-wrapper">
         <div class="purple-circle"></div>
-        <img class="portfolio-peek" src="./public/circular-type.svg" alt="Portfolio preview" />
+        <img class="portfolio-peek" src="./public/circular-type.svg" alt="Portfolio preview">
       </div>
-    </section>
-
-    <section class="footer" id="contact">
-      <h2 class="footer-title fade-in">Let's work together on your next project</h2>
+    </main>
+    <footer class="footer">
+      <h2 class="footer-title fade-in">
+        <div class="line-wrapper"><span class="line">Let's work together on your next project</span></div>
+      </h2>
       <div class="footer-contact fade-in">
-        <a href="mailto:info@marksexton.com" class="btn btn-outline">info@marksexton.com</a>
-        <a href="tel:+17632349542" class="btn btn-outline">763.234.9542</a>
-        <a href="#contact" class="btn btn-primary">Contact me</a>
+        <a href="mailto:mark@example.com" class="btn btn-outline magnetic-btn">[email protected]</a>
+        <a href="tel:+17632349542" class="btn btn-outline magnetic-btn">763.234.9542</a>
+        <a href="#" class="btn btn-primary magnetic-btn">Contact me</a>
       </div>
-    </section>
-  </main>
-
-  <!-- Floating Menu Button (Desktop) -->
-  <button class="floating-menu-btn" aria-label="Open menu">
-    <span class="hamburger-line"></span>
-    <span class="hamburger-line"></span>
-    <span class="hamburger-line"></span>
-  </button>
-
-  <!-- Slide-in Menu -->
-  <div class="slide-menu" id="slideMenu">
-    <button class="close-btn" aria-label="Close menu">
-      <span class="close-x">×</span>
-    </button>
-
-    <div class="menu-content">
-      <div class="menu-separator"></div>
-      <nav class="slide-nav">
+    </footer>
+    <div class="floating-menu-btn magnetic-btn">
+      <div class="hamburger-line"></div>
+      <div class="hamburger-line"></div>
+      <div class="hamburger-line"></div>
+    </div>
+    <nav class="slide-menu">
+      <button class="close-btn"><span class="close-x">×</span></button>
+      <div class="menu-content">
+        <div class="menu-separator"></div>
         <ul class="slide-nav-list">
-          <li class="slide-nav-item"><a href="#">Home</a></li>
+          <li class="slide-nav-item active"><a href="#">Home</a></li>
           <li class="slide-nav-item"><a href="#">Work</a></li>
           <li class="slide-nav-item"><a href="#">About</a></li>
           <li class="slide-nav-item"><a href="#">Contact</a></li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </div>
-
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
