--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <nav class="site-nav">
           <ul class="nav-list">
             <li class="nav-item active"><a href="#">Home</a></li>
-            <li class="nav-item"><a href="#">Work</a></li>
-            <li class="nav-item"><a href="#">About</a></li>
-            <li class="nav-item"><a href="#">Contact</a></li>
+            <li class="nav-item"><a href="pages/work.html">Work</a></li>
+            <li class="nav-item"><a href="pages/about.html">About</a></li>
+            <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
           </ul>
           <button class="nav-toggle">Menu</button>
         </nav>
@@ -83,7 +83,7 @@
       <div class="footer-contact fade-in">
         <a href="mailto:mark@example.com" class="btn btn-outline magnetic-btn">[email protected]</a>
         <a href="tel:+17632349542" class="btn btn-outline magnetic-btn">763.234.9542</a>
-        <a href="#" class="btn btn-primary magnetic-btn">Contact me</a>
+        <a href="pages/contact.html" class="btn btn-primary magnetic-btn">Contact me</a>
       </div>
     </footer>
     <div class="floating-menu-btn magnetic-btn">
@@ -97,9 +97,9 @@
         <div class="menu-separator"></div>
         <ul class="slide-nav-list">
           <li class="slide-nav-item active"><a href="#">Home</a></li>
-          <li class="slide-nav-item"><a href="#">Work</a></li>
-          <li class="slide-nav-item"><a href="#">About</a></li>
-          <li class="slide-nav-item"><a href="#">Contact</a></li>
+          <li class="slide-nav-item"><a href="pages/work.html">Work</a></li>
+          <li class="slide-nav-item"><a href="pages/about.html">About</a></li>
+          <li class="slide-nav-item"><a href="pages/contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
