--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,7 +39,7 @@
           <h2>Get In Touch</h2>
           <p>This page is currently under construction. Contact form and additional ways to connect will be available here.</p>
           <div class="contact-info">
-            <a href="mailto:mark@example.com" class="contact-link">[email protected]</a>
+            <a href="mailto:mscreativeonline@gmail.com" class="contact-link">mscreativeonline@gmail.com</a>
             <a href="tel:+17632349542" class="contact-link">763.234.9542</a>
           </div>
         </div>
@@ -51,7 +51,7 @@
         <div class="line-wrapper"><span class="line">Let's work together on your next project</span></div>
       </h2>
       <div class="footer-contact fade-in">
-        <a href="mailto:mark@example.com" class="btn btn-outline magnetic-btn">[email protected]</a>
+        <a href="mailto:mscreativeonline@gmail.com" class="btn btn-outline magnetic-btn">mscreativeonline@gmail.com</a>
         <a href="tel:+17632349542" class="btn btn-outline magnetic-btn">763.234.9542</a>
         <a href="contact.html" class="btn btn-primary magnetic-btn">Contact me</a>
       </div>
