--- a/pages/work.html
+++ b/pages/work.html
@@ -47,7 +47,7 @@
         <div class="line-wrapper"><span class="line">Let's work together on your next project</span></div>
       </h2>
       <div class="footer-contact fade-in">
-        <a href="mailto:mark@example.com" class="btn btn-outline magnetic-btn">[email protected]</a>
+        <a href="mailto:mscreativeonline@gmail.com" class="btn btn-outline magnetic-btn">mscreativeonline@gmail.com</a>
         <a href="tel:+17632349542" class="btn btn-outline magnetic-btn">763.234.9542</a>
         <a href="contact.html" class="btn btn-primary magnetic-btn">Contact me</a>
       </div>
