--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Mark Sexton Portfolio</title>
   
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="../public/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../public/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../public/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="../public/favicon_io/site.webmanifest">
+  <link rel="shortcut icon" href="../public/favicon_io/favicon.ico">
+  
   <link rel="stylesheet" href="../styles.css">
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
