--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mark Sexton | Portfolio</title>
   
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./public/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="./public/favicon_io/site.webmanifest">
+  <link rel="shortcut icon" href="./public/favicon_io/favicon.ico">
+  
   <!-- Preload video thumbnails for faster display -->
   <link rel="preload" href="./public/wave-loop-5.30.jpg" as="image">
   <link rel="preload" href="./public/wave-loop-mobile-5.30.jpg" as="image">
