--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <header class="site-header">
         <nav class="site-nav">
           <ul class="nav-list">
+            <div class="nav-magnetic-dot"></div>
             <li class="nav-item active"><a href="#">Home</a></li>
             <li class="nav-item"><a href="pages/work.html">Work</a></li>
             <li class="nav-item"><a href="pages/about.html">About</a></li>
