--- a/pages/work.html
+++ b/pages/work.html
@@ -25,6 +25,7 @@
       <header class="site-header">
         <nav class="site-nav">
           <ul class="nav-list">
+            <div class="nav-magnetic-dot"></div>
             <li class="nav-item"><a href="../index.html">Home</a></li>
             <li class="nav-item active"><a href="work.html">Work</a></li>
             <li class="nav-item"><a href="about.html">About</a></li>
